--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,8 +1,8 @@
-- name: Home
+- name: Willkommen
   link: /
-- name: About
-  link: /about.html
 - name: Blog
   link: /blog.html
-- name: Staff
+- name: Termine
+  link: /about.html
+- name: Impressum
   link: /staff.html
