--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,6 +3,6 @@
 - name: Blog
   link: /blog.html
 - name: Termine
-  link: /about.html
+  link: /termine.html
 - name: Impressum
-  link: /staff.html
+  link: /impressum.html
